<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_register_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5EDCD921"
    tools:context=".view.tab.TabRegisterItemFragment">

    <TextView
        android:id="@+id/fragment_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="35dp"
        android:text="@string/fragment_register_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fragment_register_layout_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/fragment_register_layout_table"
        android:layout_width="324dp"
        android:layout_height="292dp"
        android:layout_marginBottom="56dp"
        android:background="#AA949090"
        app:layout_constraintBottom_toTopOf="@+id/query_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_title">

        <TableLayout
            android:id="@+id/fragment_register_table"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/table_head"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/table_head_1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_register_table_head_1"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/table_head_2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_register_table_head_2"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/table_head_3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_register_table_head_3"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/table_head_4"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_register_table_head_4"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/query_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="24dp"
        android:text="Consultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_layout_table" />

</androidx.constraintlayout.widget.ConstraintLayout>