<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_solid_1"
    tools:context=".view.ActionsUserActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="47dp">

    <TextView
        android:id="@+id/actions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="161dp"
        android:text="@string/actions_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/actions_buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/actions_buttons_container"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actions_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/actions_register_button"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/background_solid_1"
                android:text="@string/actions_button_register"
                android:textSize="20sp" />

            <Button
                android:id="@+id/actions_query_buttons"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_solid_1"
                android:text="@string/actions_button_query"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/actions_generator_report"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:background="@drawable/background_solid_1"
                android:text="@string/actions_button_generate_report"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/actions_logout"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="79dp"
        android:layout_weight="1"
        android:background="@drawable/background_solid_1"
        android:text="@string/actions_button_logout"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actions_buttons_container" />

</androidx.constraintlayout.widget.ConstraintLayout>